# ADEPT

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  driver.cpp  driver.hpp  kernel.cpp  kernel.hpp  main.cpp  roofline_intel.sh  run_datasets.sh  test_adept.sh
adept/: CMakeLists.txt  driver.cpp  driver.hpp  instrument.hpp  kernel.cpp  kernel.hpp  timer.hpp
adept/python/: CMakeLists.txt  pyadept-driver.cpp  pyadept-driver.hpp  pyadept.cpp  pyadept.hpp
examples/: CMakeLists.txt
examples/asynch_protein/: CMakeLists.txt  asynch_protein.cpp
examples/asynch_sw/: CMakeLists.txt  asynch_sw.cpp
examples/multi_gpu/: CMakeLists.txt  multi_gpu.cpp
examples/multi_gpu_dna/: dna_example.cpp
examples/multi_gpu_protein/: protein_example.cpp
examples/multigpu_protein/: CMakeLists.txt  multigpu_protein.cpp
examples/multigpu_protein_scoreonly/: CMakeLists.txt  multigpu_protein_scoreonly.cpp
examples/py_examples/: CMakeLists.txt  py_asynch_protein.py  py_asynch_sw.py  py_multigpu_dna.py  py_multigpu_protein.py  py_simple_sw.py
examples/simple_sw/: CMakeLists.txt  simple_sw.cpp
pyadept/: CMakeLists.txt  __init__.py.in
pyadept/driver/: __init__.py
pyadept/options/: __init__.py
pyadept/test/: README.md  __init__.py  __main__.py  test_dna.py  test_multigpu.py  test_multigpu_protein.py  test_protein.py  test_simple_protein.py
test-data/: dna-output1.diff  expected256.algn  protein_expected256.algn  protein_scoreonly_expected256.algn
