cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
project(multi_gpu LANGUAGES CXX CUDA)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# add_subdirectory(adept)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../adept ${CMAKE_CURRENT_BINARY_DIR}/adept)
include_directories("../../adept")

add_executable(multi_gpu multi_gpu.cpp)
target_link_libraries(multi_gpu adept_lib_shared)
